Added contact me but not live

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
 </head>
@@ -38,9 +37,9 @@
             <section>
                     <p><b><big>What You'll Find Here</big></b></p>
                     <ul>
-                        <li><b>Education:</b> Explore my academic journey, achievements, and key coursework.</li>
-                        <li><b>Experiences:</b> Learn about my internship and personal projects that demonstrate my growth and problem-solving skills.</li>
-                        <li><b>Projects:</b> Dive into the details of my projects, including games, simulations, and tools I've developed.</li>
+                        <li><b><a href="/portfolio/Education.html" target="_main" style="color: blue;">Education:</a></b> Explore my academic journey, achievements, and key coursework.</li>
+                        <li><b><a href="/portfolio/Experience.html" target="_main" style="color: blue;">Experiences:</a></b> Learn about my internship and personal projects that demonstrate my growth and problem-solving skills.</li>
+                        <li><b><a href="/portfolio/Projects.html" target="_main" style="color: blue;">Projects:</a></b> Dive into the details of my projects, including games, simulations, and tools I've developed.</li>
                     </ul>
             </section>
         </div>
@@ -55,7 +54,7 @@
                         <li><b>Technologies:</b> C, Structs, Arrays, Conditional Statements</li>
                         <li><b>Skills Gained:</b> Logical thinking, Game logic, Data structures</li>
                     </ul>
-                    <a href="/portfolio/Projects.html" target="_main" style="color: blue">Read more</a>
+                    <a href="Projects.html" target="_main" style="color: blue">Read more</a>
                 </p>
             </section>
         </div>
@@ -66,15 +65,13 @@
             <section>
                     <p><b><big>Contact Me</big></b></p>
                     <p>
-                    Feel free to reach out to discuss my work or for collaboration opportunities:
-                    </p>
+                    Feel free to reach out to discuss my work or for collaboration opportunities. I'm always open to new projects and challenges!:
+                    <br>
+                    Click <a href="/portfolio/Contact Me.html" target="_main" style="color: blue;">here</a> to contact me.
                     <p>
-                    <a href="mailto:amiadrishikhar@gmail.com?subject=Portfolio%20Inquiry&body=Hello%20Adrishikhar,%20I%20would%20like%20to%20discuss..." target="_main" style="color: red; text-decoration: none;"><i class="fa-solid fa-envelope fa-2x"></i></a>
-                    <a href="https://github.com/AdrishikharChowdhury" target="_main" style="color: inherit; text-decoration: none;"><i class="fa-brands fa-github fa-2x"></i></a>
-                    <a href="www.linkedin.com/in/adrishikhar-chowdhury-b44035319" target="_main" style="color: blue; text-decoration: none;"><i class="fa-brands fa-linkedin fa-2x"></i></a>
-                    <a href="https://www.instagram.com/adrishikharchowdhury/" target="_main" style="color: purple; text-decoration: none;"><i class="fa-brands fa-instagram fa-2x"></i></a>
-                    <a href="https://linktr.ee/Adrishikhar" target="_main" style="color: green; text-decoration: none;"><i class="fa-solid fa-tree fa-2x"></i></a>
+                    
                 </p>
+              </p>
             </section>
         </div>
     <hr>
@@ -83,9 +80,9 @@
             <p>
                 <big>
                     <p>
-                        <i>"Science is just the art of making what seems impossible, possible."</i>
-                        <br>
-                                                                                -<b>Senku Ishigami</b>
+                      <i>"Science is just the art of making what seems impossible, possible."</i>
+                      <br>
+                                                                              -<b>Senku Ishigami</b>
                 </p>
                 </big>
             </p>
@@ -94,12 +91,12 @@
     <hr>
     <section>
             <p><big><b>Links</b></big></p>
+      <p>Here are some links where you can find me and know more about my social life</p>
             <p>
-                <ul>
-                    <li><a href="/portfolio/Education.html" target="_main" style="color: blue;">Education</a></li>
-                    <li><a href="/portfolio/Experience.html" target="_main" style="color: blue;">Experiences</a></li>
-                    <li><a href="/portfolio/Projects.html" target="_main" style="color: blue;">Projects</a></li>
-                </ul>
+               <a href="https://github.com/AdrishikharChowdhury" target="_main" style="color: inherit; text-decoration: none;"><i class="fa-brands fa-github fa-2x"></i></a>
+                    <a href="www.linkedin.com/in/adrishikhar-chowdhury-b44035319" target="_main" style="color: blue; text-decoration: none;"><i class="fa-brands fa-linkedin fa-2x"></i></a>
+                    <a href="https://www.instagram.com/adrishikharchowdhury/" target="_main" style="color: purple; text-decoration: none;"><i class="fa-brands fa-instagram fa-2x"></i></a>
+                    <a href="https://linktr.ee/Adrishikhar" target="_main" style="color: green; text-decoration: none;"><i class="fa-solid fa-tree fa-2x"></i></a> 
             </p>
     </section>
     </footer>
