made a little more dynamic

--- a/Experience.html
+++ b/Experience.html
@@ -27,7 +27,11 @@
                 <big><big><p><b>Intern</b></p></big></big>
             <p>
                 <ul>
-                    <li><b>ALABS</b> <i>(November 2024-Present):</i> Working and learning flask and postgreSQL using python</li>
+                    <li><b>ALABS</b> <i>(November 2024-Present):</i>
+                        <ul>
+                            <li>Working and learning flask and postgreSQL using python</li>
+                        </ul>
+                        </li>
                 </ul>
             </p>
             </section>
@@ -44,7 +48,7 @@
                     <li> <b>Banking System</b><i>(November 2024)</i>: A simple banking system where you can create an account, deposit money, withdraw money and check balance</li>
                     <li><b>Portfolio Page</b><i>(January 2025)</i>: A simple portfolio page where I have mentioned my details</li>
                 </ul>
-                    (All of the projects details in the projects page)
+                    (All of the project details in the <a href="/portfolio/Projects.html" target="_main" style="color:blue">projects </a>page)
             </p>
         </section>
     </div>
@@ -53,7 +57,16 @@
     <footer>
         <div>
             <section>
-                <p align="center"><a href="/portfolio/index.html" target="_main" style="color: inherit; text-decoration: none;"><i class="fa-solid fa-house fa-2x" ></i></a></p>
+                <p align="center">
+                    <big><i>"Failure is simply the stepping stone to success."</i></big><br>
+                            <b>-Senku Ishigami</b>
+                </p>
+            </section>
+        </div>
+        <hr>
+        <div>
+            <section>
+                <p align="center"><a href="/portfolio/index.html" target="_main" style="color:inherit"><i class="fa-solid fa-house fa-2x"></i></a></p>
             </section>
         </div>
     </footer>
