--- a/Projects.html
+++ b/Projects.html
@@ -11,11 +11,15 @@
         <h1>Projects</h1>
     </header>
     <main>
-        <p>Welcome to My Projects Page
-            <br>
-            Here, I've showcased a collection of personal projects that highlight my technical skills, problem-solving abilities, and passion for learning. These projects range from game development to practical tools and simulations, reflecting my journey of exploring different areas of programming and technology. Each project has been an opportunity to apply what I've learned, experiment with new ideas, and improve my skills.
-        </p>
-            <p>Feel free to explore the details below, and check out the technologies and concepts I've worked with!</p>
+        <div>
+            <section>
+                <p><big><b>Welcome to My Projects Page</b></big></p>
+                <p>
+                    Here, I've showcased a collection of personal projects that highlight my technical skills, problem-solving abilities, and passion for learning. These projects range from game development to practical tools and simulations, reflecting my journey of exploring different areas of programming and technology. Each project has been an opportunity to apply what I've learned, experiment with new ideas, and improve my skills.
+                </p>
+                <p>Feel free to explore the details below, and check out the technologies and concepts I've worked with!</p>
+            </section>
+        </div>
             <hr>
             <div>
                 <section>
@@ -91,14 +95,27 @@
                         <li><b>Technologies Used:</b> HTML, CSS</li>
                         <li><b>Key Features:</b> Web design, layout, content organization</li>
                         <li><b>Key Takeaways:</b> Front-end development, personal branding, web presence</li>
-                        <li><b>Links:</b> Not yet released</li>
+                        <li><b>Links:</b> <a href="https://github.com/AdrishikharChowdhury/Project-Portfolio.git"  target="_main" style="color: blue">View code on GitHub</a></li>
                     </ul>
                 </section>
             </div>
     </main>
         <hr>
     <footer>
-        <p align="center"><a href="/portfolio/index.html" target="_main" style="color:inherit"><i class="fa-solid fa-house fa-2x"></i></a></p>
+        <div>
+            <section>
+                <p align="center">
+                    <big><i>"If you don't make your own path, you'll be nothing but a follower."</i></big><br>
+                            <b>-Senku Ishigami</b>
+                </p>
+            </section>
+        </div>
+        <hr>
+        <div>
+            <section>
+                <p align="center"><a href="/portfolio/index.html" target="_main" style="color:inherit"><i class="fa-solid fa-house fa-2x"></i></a></p>
+            </section>
+        </div>
     </footer>
 </body>
 </html>
