--- a/Education.html
+++ b/Education.html
@@ -58,7 +58,7 @@
                     <li><b>Key courseworks:</b> Data structures,Artificial Intelligence,IELTS,Python,Java,OOPs</li>
                     <li><b>Mini projects:</b> Guess The Number Game, Password Generator, Pokemon Battle Simulation, Banking system, Portfolio page</li>
                 </ul>
-                (Details in Projects page)
+                (Details in <a href="/portfolio/Projects.html" target="_main" style="color:blue">Projects</a> page)
             </section>
         </div>
     </main>
@@ -66,7 +66,16 @@
     <footer>
         <div>
             <section>
-                <p align="center"><a href="/portfolio/index.html" target="_main" style="color: inherit; text-decoration: none;"><i class="fa-solid fa-house fa-2x" ></i></a></p>
+                <p align="center">
+                    <big><i>"With science, we can conquer anything."</i></big><br>
+                            <b>-Senku Ishigami</b>
+                </p>
+            </section>
+        </div>
+        <hr>
+        <div>
+            <section>
+                <p align="center"><a href="/portfolio/index.html" target="_main" style="color:inherit"><i class="fa-solid fa-house fa-2x"></i></a></p>
             </section>
         </div>
     </footer>
