--- a/index.html
+++ b/index.html
@@ -89,16 +89,29 @@
         </section>
     </div>
     <hr>
-    <section>
+    <div>
+        <section>
             <p><big><b>Links</b></big></p>
-      <p>Here are some links where you can find me and know more about my social life</p>
-            <p>
-               <a href="https://github.com/AdrishikharChowdhury" target="_main" style="color: inherit; text-decoration: none;"><i class="fa-brands fa-github fa-2x"></i></a>
+            <p>Here are some links where you can find me and know more about my social life</p>
+                <p>
+                    <a href="https://github.com/AdrishikharChowdhury" target="_main" style="color: inherit; text-decoration: none;"><i class="fa-brands fa-github fa-2x"></i></a>
                     <a href="www.linkedin.com/in/adrishikhar-chowdhury-b44035319" target="_main" style="color: blue; text-decoration: none;"><i class="fa-brands fa-linkedin fa-2x"></i></a>
                     <a href="https://www.instagram.com/adrishikharchowdhury/" target="_main" style="color: purple; text-decoration: none;"><i class="fa-brands fa-instagram fa-2x"></i></a>
                     <a href="https://linktr.ee/Adrishikhar" target="_main" style="color: green; text-decoration: none;"><i class="fa-solid fa-tree fa-2x"></i></a> 
-            </p>
-    </section>
+                </p>
+        </section>
+    </div>
+    <hr>
+    <div align="right">
+        <section>
+            <small>
+                <p>&copy; 2025 Adrishikhar Chowdhury. All rights reserved.</p>
+                <p>
+                    Building innovative projects and empowering others through knowledge and collaboration.
+                </p>
+            </small>
+        </section>
+    </div>
     </footer>
 </body>
 </html>
