Added Learnhub and removed contact me from live

--- a/Projects.html
+++ b/Projects.html
@@ -99,6 +99,21 @@
                     </ul>
                 </section>
             </div>
+            <hr>
+            <div>
+                <section>
+                    <p><big><b>LearnHub</b></big></p>
+                    <ul>
+                        <li><b>Date:</b> January 2025</li>
+                        <li><b>Description:</b>
+                            Developed an educational platform to provide students with access to videos, tutorials, and projects. The platform focuses on creating an engaging and user-friendly learning environment.</li>
+                        <li><b>Technologies Used:</b> HTML, CSS, JavaScript (On development not yet live)</li>
+                        <li><b>Key Features:</b> Educational content organization, responsive design, user-friendly interface</li>
+                        <li><b>Key Takeaways:</b> Front-end development, user-centric design, and web development best practices</li>
+                        <li><b>Links:</b> <a href="https://github.com/AdrishikharChowdhury/Project-LearnHub.git" target="_main" style="color: blue">View code on GitHub</a></li>
+                    </ul>
+                </section>
+            </div>            
     </main>
         <hr>
     <footer>
