--- a/Education.html
+++ b/Education.html
@@ -3,28 +3,47 @@
 <head>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/portfolio/static/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education</title>
 </head>
 <body>
     <header>
-        <p><h1>Education</h1></p>
+        <div class="navbar">
+            <big>
+                <div class="customhead">
+                    <div id="logo1">
+
+                    </div>
+                </div></big>
+                <div class="navhead">
+                    <a class="navlink" href="/portfolio/index.html" target="_main">Home</a>
+                    <a class="navlink" href="/portfolio/Education.html" target="_main">Education</a>
+                    <a class="navlink" href="/portfolio/Experience.html">Experiences</a>
+                    <a class="navlink" href="/portfolio/Projects.html">Projects</a>
+                    <a class="navlink" href="/portfolio/Contact Me.html">Contact Me</a> 
+                </div>
+    </div>
     </header>
     <main>
-        <div>
-            <section>
-                <p>
-                    Welcome to my Education page! Here, I've detailed my academic journey, starting from my foundational school years to my ongoing Bachelor of Technology program in Electronics and Communication Engineering. My education has been instrumental in shaping my problem-solving abilities, technical expertise, and passion for innovation. Along the way, I've achieved milestones and participated in various competitions that have enriched my learning experience.
-                    <p>
+        <div class="contact">
+            <a href="/portfolio/Contact Me.html"><i class="fa-regular fa-message"></i></a>
+        </div>
+        <br><br>
+            <section class="primary">
+                <big><b>Welcome to my Education page</b></big>
+            </section>
+            <hr>
+                <section>
+                    <p>Here, I've detailed my academic journey, starting from my foundational school years to my ongoing Bachelor of Technology program in Electronics and Communication Engineering. My education has been instrumental in shaping my problem-solving abilities, technical expertise, and passion for innovation. Along the way, I've achieved milestones and participated in various competitions that have enriched my learning experience.
+                    
                         Explore the sections below to learn more about my academic background, key coursework, and notable achievements.
                     </p>
-                </p>
             </section>
-        </div>
         <hr>
         <div>
             <section>
-                <big><p><b>Secondary Examination(Class X)</b></p></big>
+                <p><b><big>Secondary Examination(Class X)</big></b></p>
                 <p>
                     <ul>
                         <li>Behala Aryya Vidyamandir(<i>2020-2021</i>)</li>
@@ -37,7 +56,7 @@
         <hr>
         <div>
             <section>
-                <big><p><b>Higher Secondary Examination(Class XII)</b></p></big>
+                <p><b><big>Higher Secondary Examination(Class XII)</big></b></p>
                 <p>
                     <ul>
                         <li>Behala Aryya Vidyamandir(<i>2021-2023</i>)</li>
@@ -63,7 +82,6 @@
         </div>
     </main>
     <hr>
-    <footer>
         <div>
             <section>
                 <p align="center">
@@ -72,12 +90,16 @@
                 </p>
             </section>
         </div>
-        <hr>
-        <div>
-            <section>
-                <p align="center"><a href="/portfolio/index.html" target="_main" style="color:inherit"><i class="fa-solid fa-house fa-2x"></i></a></p>
-            </section>
-        </div>
+        <footer>
+            <div class="copyright">
+                    <small>
+                        <p class="foots">&copy; 2025 Adrishikhar Chowdhury. All rights reserved.</p>
+                        <br>
+                        <p class="foots">
+                            Building innovative projects and empowering others through knowledge and collaboration.
+                        </p>
+                    </small>
+            </div>
     </footer>
 </body>
 </html>
