--- a/Experience.html
+++ b/Experience.html
@@ -2,25 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/portfolio/static/css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experiences</title>
 </head>
 <body>
     <header>
-        <h1>Experiences</h1>
+        <div class="navbar">
+            <big>
+                <div class="customhead">
+                    <div id="logo2">
+
+                    </div>
+                </div></big>
+                <div class="navhead">
+                    <a class="navlink" href="/portfolio/index.html" target="_main">Home</a>
+                    <a class="navlink" href="/portfolio/Education.html" target="_main">Education</a>
+                    <a class="navlink" href="/portfolio/Experience.html">Experiences</a>
+                    <a class="navlink" href="/portfolio/Projects.html">Projects</a>
+                    <a class="navlink" href="/portfolio/Contact Me.html">Contact Me</a>
+                </div> 
+        </div>
     </header>
     <main>
-        <div>
-            <section>
-                <p>
-                    Welcome to my Experiences page! This section highlights my journey through internships, personal projects, and other hands-on experiences that have helped me develop practical skills and apply my academic knowledge in real-world scenarios. From exploring backend development during internships to working on personal projects like games and simulations, these experiences have been pivotal in shaping my technical expertise and problem-solving abilities.
-                    <p>
+        <div class="contact">
+            <a href="/portfolio/Contact Me.html"><i class="fa-regular fa-message"></i></a>
+        </div>
+        <br><br>
+            <section class="primary">
+                    <big><b>Welcome to my Experiences page</b></big>
+                </section>
+                <hr>
+                <section>
+                    <p>This section highlights my journey through internships, personal projects, and other hands-on experiences that have helped me develop practical skills and apply my academic knowledge in real-world scenarios. From exploring backend development during internships to working on personal projects like games and simulations, these experiences have been pivotal in shaping my technical expertise and problem-solving abilities.
+                    
                         Dive in to learn more about the work I've done and the skills I've gained along the way. Feel free to explore the details below and discover the projects and tasks that have contributed to my growth as a developer and a learner.
                     </p>
-                </p>
             </section>
-        </div>
         <hr>
         <div>
             <section>
@@ -54,7 +73,6 @@
     </div>
     </main>
     <hr>
-    <footer>
         <div>
             <section>
                 <p align="center">
@@ -63,12 +81,16 @@
                 </p>
             </section>
         </div>
-        <hr>
-        <div>
-            <section>
-                <p align="center"><a href="/portfolio/index.html" target="_main" style="color:inherit"><i class="fa-solid fa-house fa-2x"></i></a></p>
-            </section>
-        </div>
+        <footer>
+            <div class="copyright">
+                    <small>
+                        <p class="foots">&copy; 2025 Adrishikhar Chowdhury. All rights reserved.</p>
+                        <br>
+                        <p class="foots">
+                            Building innovative projects and empowering others through knowledge and collaboration.
+                        </p>
+                    </small>
+            </div>
     </footer>
 </body>
 </html>
