--- a/Projects.html
+++ b/Projects.html
@@ -3,23 +3,43 @@
 <head>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/portfolio/static/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
 </head>
 <body>
     <header>
-        <h1>Projects</h1>
+        <div class="navbar">
+            <big>
+                <div class="customhead">
+                    <div id="logo4">
+
+                    </div>
+                </div></big>
+                <div class="navhead">
+                    <a class="navlink" href="/portfolio/index.html" target="_main">Home</a>
+                    <a class="navlink" href="/portfolio/Education.html" target="_main">Education</a>
+                    <a class="navlink" href="/portfolio/Experience.html">Experiences</a>
+                    <a class="navlink" href="/portfolio/Projects.html">Projects</a>
+                    <a class="navlink" href="/portfolio/Contact Me.html">Contact Me</a> 
+                </div>
+    </div>
     </header>
     <main>
-        <div>
+        <div class="contact">
+            <a href="/portfolio/Contact Me.html"><i class="fa-regular fa-message"></i></a>
+        </div>
+        <br><br>
+            <section class="primary">
+                <big><b>Welcome to My Projects Page</b></big>
+            </section>
+                <hr>
             <section>
-                <p><big><b>Welcome to My Projects Page</b></big></p>
                 <p>
                     Here, I've showcased a collection of personal projects that highlight my technical skills, problem-solving abilities, and passion for learning. These projects range from game development to practical tools and simulations, reflecting my journey of exploring different areas of programming and technology. Each project has been an opportunity to apply what I've learned, experiment with new ideas, and improve my skills.
                 </p>
                 <p>Feel free to explore the details below, and check out the technologies and concepts I've worked with!</p>
             </section>
-        </div>
             <hr>
             <div>
                 <section>
@@ -116,7 +136,6 @@
             </div>            
     </main>
         <hr>
-    <footer>
         <div>
             <section>
                 <p align="center">
@@ -125,12 +144,16 @@
                 </p>
             </section>
         </div>
-        <hr>
-        <div>
-            <section>
-                <p align="center"><a href="/portfolio/index.html" target="_main" style="color:inherit"><i class="fa-solid fa-house fa-2x"></i></a></p>
-            </section>
-        </div>
+        <footer>
+            <div class="copyright">
+                    <small>
+                        <p class="foots">&copy; 2025 Adrishikhar Chowdhury. All rights reserved.</p>
+                        <br>
+                        <p class="foots">
+                            Building innovative projects and empowering others through knowledge and collaboration.
+                        </p>
+                    </small>
+            </div>
     </footer>
 </body>
 </html>
